--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 	<artifactId>identity-server-parent</artifactId>
 	<packaging>pom</packaging>
 	<description>WSO2 Identity Server</description>
-	<version>5.0.1-SNAPSHOT</version>
+	<version>5.1.0-SNAPSHOT</version>
 	<name>WSO2 Identity Server</name>
 	<url>http://wso2.org/projects/identity</url>
 
@@ -256,7 +256,7 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-assembly-plugin</artifactId>
-                    <version>2.4</version>
+                    <version>2.2-beta-2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -491,7 +491,7 @@
 		<axis2.jaxb.wso2.version>${orbit.version.axis2}</axis2.jaxb.wso2.version>
 		<jibx.wso2.version>1.2.1.wso2v1</jibx.wso2.version>
 		<jaxb.wso2.version>2.2.5.wso2v1</jaxb.wso2.version>
-
+		<kaptcha.wso2.version>2.3.0.wso2v1</kaptcha.wso2.version>
 		<version.commons.logging>1.1.1</version.commons.logging>
 	</properties>
 
